k8s/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  labels:
    app: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: confluentinc/cp-kafka:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 29092 # Internal PLAINTEXT (Broker)
        - containerPort: 29093 # Internal CONTROLLER
        - containerPort: 9101 # JMX
---

apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  labels:
    app: kafka
spec:
  selector:
    app: kafka
  ports:
    # Port for inter-broker/client communication
    - name: client
      port: 29092
      targetPort: 29092
    # Port for the KRaft controller communication
    - name: controller
      port: 29093
      targetPort: 29093
  type: ClusterIP
